refactor: getAll 메서드 불변 리스트 반환, title이나 author이 null일 경우 IllegalArgumentException 예외처리